# class_activities_and_resources

./: README.md
in_class_day02/: package.xml  setup.py
in_class_day02/in_class_day02/: receive_message.py  send_message.py
in_class_day03/: package.xml  setup.py
in_class_day03/in_class_day03/: emergency_stop.py
in_class_day03_cpp_solutions/: CMakeLists.txt  package.xml
in_class_day03_cpp_solutions/src/: distance_emergency_stop.cpp  emergency_stop.cpp
in_class_day03_solutions/in_class_day03_solutions/: emergency_stop.py
